:rocket: Add UpdateQuery